// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseProjectIdentifier > non-strict mode valid 1`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 2`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 3`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 4`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 5`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 6`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 7`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 8`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 9`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 10`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 11`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 12`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 13`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 14`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 15`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 16`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 17`] = `
{
  "deploymentIdentifier": "@username/foo-bar@dev",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 18`] = `
{
  "deploymentIdentifier": "@username/foo-bar@1.0.0",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 19`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 20`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "@username/foo-bar@01234567",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 21`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > non-strict mode valid 22`] = `
{
  "deploymentIdentifier": "@username/foo-bar@latest",
  "deploymentVersion": "latest",
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
  "toolName": "foo",
}
`;

exports[`parseProjectIdentifier > strict mode valid 1`] = `
{
  "projectIdentifier": "@username/foo",
  "projectNamespace": "username",
  "projectSlug": "foo",
}
`;

exports[`parseProjectIdentifier > strict mode valid 2`] = `
{
  "projectIdentifier": "@username/foo-bar",
  "projectNamespace": "username",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > strict mode valid 3`] = `
{
  "projectIdentifier": "@username/foobar123-yo",
  "projectNamespace": "username",
  "projectSlug": "foobar123-yo",
}
`;

exports[`parseProjectIdentifier > strict mode valid 4`] = `
{
  "projectIdentifier": "@u/foo-bar",
  "projectNamespace": "u",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > strict mode valid 5`] = `
{
  "projectIdentifier": "@a/foo-bar",
  "projectNamespace": "a",
  "projectSlug": "foo-bar",
}
`;

exports[`parseProjectIdentifier > strict mode valid 6`] = `
{
  "projectIdentifier": "@foo/foobar123-yo",
  "projectNamespace": "foo",
  "projectSlug": "foobar123-yo",
}
`;

exports[`parseProjectIdentifier > strict mode valid 7`] = `
{
  "projectIdentifier": "@foo/bar",
  "projectNamespace": "foo",
  "projectSlug": "bar",
}
`;
